# research-etl

./: .gitignore  CODEX.md  FUTURE.md  JOB_SPEC.md  LICENSE  PROJECT_STATUS.md  README.md  TRANSPORT.md  builder_landcore_hpcc.todo.md  catalog.json  cli.py  data.notes.md  dead_code_report.md  duplicate_code_report.md  etl.code-workspace  future.todo.md  geo.plugins.todo.md  notes.md  parallel.todo.md  pipe.plug.notes.md  portable.todo.md  proposed_cleanup_plan.md  pyproject.toml  pytest.ini  query.todo.md  requirements-dev.txt  requirements.min.txt  requirements.txt  source_control.todo.md  startweb.bat  states.of.interest.csv  stepper.todo.md  test.yml
.runs_dep_demo/: runs.jsonl
.tmp/: states.of.interest.fixed.csv  yanroy_diag_tiles.py
FUTURE/: PROVISIONER.md  data.notes.md  geo.plugins.todo.md  notes.md  parallel.todo.md  source_control.todo.md
ai_prompts/: architecture_overview.md  data_dictionary_contributing_guidelines.md  data_dictionary_data_classes.md  data_dictionary_entry_template.md  data_dictionary_guidelines.md  data_dictionary_naming_guidelines.md  data_dictionary_prompt.md  data_dictionary_quality_guidelines.md  index.yml  pipeline_failure_patterns.md  pipeline_failure_triage_checklist.md  pipeline_intake_checklist.md  pipeline_progress_checklist.md  pipeline_prompt.md  plugin_selection.md  prompt_engineering_guidelines.md  prompt_update_checklist.md  provenance_guidelines.md
config/: artifacts.example.yml  artifacts.yml  catalog_ai_specs.example.yml  catalog_ai_specs.yml  data_locations.yml  environments.example.yml  environments.hpcc_dev.yml  (+13 more)
(+377 files in other folders)
